--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.username=sa
 spring.datasource.password=
 # MongoDB database
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
+# Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+logging.level.org.springframework.cache=TRACE
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
