--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,11 @@ spring.datasource.username=sa
 spring.datasource.password=
 # MongoDB database
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
-# Redis
+# Redis (disabled for now - serialization issues with Map<String, Any>)
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+# Use simple in-memory cache for development
+spring.cache.type=simple
 logging.level.org.springframework.cache=TRACE
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
