--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.datasource.username=sa
 spring.datasource.password=
 # MongoDB database
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
-# Redis (disabled for now - serialization issues with Map<String, Any>)
+# Redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-# Use simple in-memory cache for development
-spring.cache.type=simple
+spring.cache.type=redis
+spring.cache.redis.time-to-live=600000
 logging.level.org.springframework.cache=TRACE
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
