--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.data.redis.port=6379
 spring.cache.type=redis
 spring.cache.redis.time-to-live=600000
 logging.level.org.springframework.cache=TRACE
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
